Generating some domain/repository/services thanks to JHipster
